Agrego metodo para leer las imagenes de las cartas y cambio los setText de los Labels por setIcon